// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render tabs component correctly 1`] = `
<div>
  <div
    class="sc-jTzLTM kWTHxf"
  >
    <div
      class="sc-fjdhpX jLBUHC"
      role="tablist"
    >
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="true"
          class="sc-cSHVUG tab__button--active exKdbt"
          data-index="0"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 1
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="1"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 2
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="2"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 3
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly when withBorderBottom equals false 1`] = `
<div>
  <div
    class="sc-jTzLTM iAnCRo"
  >
    <div
      class="sc-fjdhpX jLBUHC"
      role="tablist"
    >
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="true"
          class="sc-cSHVUG tab__button--active exKdbt"
          data-index="0"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 1
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="1"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 2
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="2"
          role="tab"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 3
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly with props for text of tabs 1`] = `
<div>
  <div
    class="sc-jTzLTM kWTHxf"
  >
    <div
      class="sc-fjdhpX jLBUHC"
      role="tablist"
    >
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="true"
          class="sc-cSHVUG tab__button--active exKdbt"
          data-index="0"
          role="tab"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 1
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="1"
          role="tab"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 2
          </div>
        </button>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <button
          aria-selected="false"
          class="sc-cSHVUG exKdbt"
          data-index="2"
          role="tab"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 3
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
